--- a/_downloads/plot_psd.ipynb
+++ b/_downloads/plot_psd.ipynb
@@ -62,7 +62,7 @@
       },
       "outputs": [],
       "source": [
-        "mapping = map_subjects[subject_id]\nbads = list()\nbad_name = op.join(op.dirname(sys.argv[0]), '..', 'processing',\n                   'bads', mapping, 'run_%02d_raw_tr.fif_bad' % run)\nif os.path.exists(bad_name):\n    with open(bad_name) as f:\n        for line in f:\n            bads.append(line.strip())"
+        "mapping = map_subjects[subject_id]\nbads = list()\nbad_name = op.join('..', '..', 'processing', 'bads', mapping,\n                   'run_%02d_raw_tr.fif_bad' % run)\nwith open(bad_name) as f:\n    for line in f:\n        bads.append(line.strip())"
       ]
     },
     {
@@ -134,25 +134,7 @@
       },
       "outputs": [],
       "source": [
-        "fig, axes = plt.subplots(1, 2, figsize=(12, 6))\nset_matplotlib_defaults(plt)\nax = axes[0]\nraw.plot_psd(\n    average=False, line_alpha=0.6, fmin=0, fmax=350, xscale='log',\n    spatial_colors=False, show=False, ax=[ax])\nax.set(xlabel='Frequency (Hz)')\n\nfor l, c in zip(ax.get_lines(), colors):\n    if c == 'r':\n        l.set_color(c)\n        l.set_linewidth(2.)\n        l.set_zorder(3)\n    else:\n        l.set_zorder(4)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Next, the linear scale to check power line frequency\n\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "ax = axes[1]\nraw.plot_psd(\n    average=False, line_alpha=0.6, n_fft=2048, n_overlap=1024, fmin=0,\n    fmax=350, xscale='linear', spatial_colors=False, show=False, ax=[ax])\nax.set(xlabel='Frequency (Hz)', ylabel='')\nax.axvline(50., linestyle='--', alpha=0.25, linewidth=2)\nax.axvline(50., linestyle='--', alpha=0.25, linewidth=2)\n\n# HPI coils\nfor freq in [293., 307., 314., 321., 328.]:\n    ax.axvline(freq, linestyle='--', alpha=0.25, linewidth=2, zorder=2)\n\nfig.tight_layout()\nfig.savefig(op.join('..', 'figures', 'psd.pdf'), bbox_to_inches='tight')\nplt.show()"
+        "fig, axes = plt.subplots(1, 2, figsize=(12, 6))\nset_matplotlib_defaults(plt)\nax = axes[0]\nraw.plot_psd(\n    average=False, line_alpha=0.6, fmin=0, fmax=350, xscale='log',\n    spatial_colors=False, show=False, ax=[ax])\nax.set(xlabel='Frequency (Hz)')\n\nfor l, c in zip(ax.get_lines(), colors):\n    if c == 'r':\n        l.set_color(c)\n        l.set_linewidth(2.)\n        l.set_zorder(3)\n    else:\n        l.set_zorder(4)\n\n# Next, the linear scale to check power line frequency\n\nax = axes[1]\nraw.plot_psd(\n    average=False, line_alpha=0.6, n_fft=2048, n_overlap=1024, fmin=0,\n    fmax=350, xscale='linear', spatial_colors=False, show=False, ax=[ax])\nax.set(xlabel='Frequency (Hz)', ylabel='')\nax.axvline(50., linestyle='--', alpha=0.25, linewidth=2)\nax.axvline(50., linestyle='--', alpha=0.25, linewidth=2)\n\n# HPI coils\nfor freq in [293., 307., 314., 321., 328.]:\n    ax.axvline(freq, linestyle='--', alpha=0.25, linewidth=2, zorder=2)\n\nfig.tight_layout()\nfig.savefig(op.join('..', 'figures', 'psd.pdf'), bbox_to_inches='tight')\nplt.show()"
       ]
     }
   ],
